/// Autogenerated with StateSmith 0.19.0+b5719011215d41a81572ed347c02b22db5d1a48f. Last run: 2025-11-22 02:47:23 PM.
/// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#ifndef FOO_BAR_MYFSM_H_
#define FOO_BAR_MYFSM_H_
/*
 * Copyright Integer Fox Authors
 *
 * Distributed under the BSD 3 Clause License. See the license agreement at:
 * https://github.com/Integerfox/kit.core/blob/main/LICENSE
 *
 * Redistributions of the source code must retain the above copyright notice.
*/

#include <stdint.h>
#include "Kit/Container/RingBuffer.h"

namespace Foo {
namespace Bar {
/// Generated state machine
class MyFsm
{
public:
    /// Enum definition
    enum class EventId: uint8_t
    {
        DO = 0, // The `do` event is special. State event handlers do not consume this event (ancestors all get it too) unless a transition occurs.
        EVENT1 = 1,
        EVENT2 = 2,
        EVENT3 = 3,
    };

    /// Enum definition
    enum
    {
        EventIdCount = 4
    };

    /// Enum definition
    enum class StateId: uint8_t
    {
        ROOT = 0,
        STATE1 = 1,
        STATE2 = 2,
        STATE3 = 3,
        STATE3A = 4,
        STATE3B = 5,
        TERMINAL = 6,
    };

    /// Enum definition
    enum
    {
        StateIdCount = 7
    };

    /// Used internally by state machine. Feel free to inspect, but don't modify.
    StateId stateId;

    /// Virtual destructor
    virtual ~MyFsm() {}

    /// State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
    MyFsm() : m_eventQueue( m_eventQueueMemory, max_event_queue_depth + 1 ), m_processingFsmEvent(false)
    {
    }

    /// Starts the state machine. Must be called before dispatching events. Not thread safe.
    void startFsm();

    /// Dispatches an event to the state machine. Not thread safe.
    /// Note! This function assumes that the `eventId` parameter is valid.
    void dispatchEvent(EventId eventId);

    /// Thread safe.
    static char const * stateIdToString(StateId id);

    /// Thread safe.
    static char const * eventIdToString(EventId id);

// ------------- Start of Injected ClassCode ----------------------------------

public:
    /// The State Machine name
    static constexpr const char* fsmName = "MyFsm";

protected:
    /// Depth of the Event Queue
    static constexpr unsigned max_event_queue_depth = 4;

    /// Event Queue
    Kit::Container::RingBuffer<EventId> m_eventQueue;

    /// Track event processing in progress state
    bool m_processingFsmEvent;

    /// Memory for the Event Queue
    EventId m_eventQueueMemory[max_event_queue_depth + 1];

    /// The 'real' dispatch event method that is generated by StateSmith
    void fsmDispatchEvent(EventId eventId);

protected:
    /// Action Method
    virtual void ActionA() noexcept = 0;

    /// Action Method
    virtual void ActionB() noexcept = 0;

    /// Action Method
    virtual void ActionC() noexcept = 0;

    /// Action Method
    virtual void ActionD() noexcept = 0;

    /// Action Method
    virtual void ActionE() noexcept = 0;

    /// Action Method
    virtual void ActionF() noexcept = 0;

    /// Action Method
    virtual void ActionG() noexcept = 0;

    /// Action Method
    virtual void ActionH() noexcept = 0;


protected:
    /// Guard Method
    virtual bool guard1() noexcept = 0;

// ------------- End of Injected ClassCode ----------------------------------



// ################################### PRIVATE MEMBERS ###################################
private:

    /// This function is used when StateSmith doesn't know what the active leaf state is at
    /// compile time due to sub states or when multiple states need to be exited.
    void exitUpToStateHandler(StateId desiredState);


    ////////////////////////////////////////////////////////////////////////////////
    /// event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////

    /// State Machine function
    void ROOT_enter();

    /// State Machine function
    void ROOT_ChoicePoint_j1__transition();


    ////////////////////////////////////////////////////////////////////////////////
    /// event handlers for state STATE1
    ////////////////////////////////////////////////////////////////////////////////

    /// State Machine function
    void STATE1_enter();

    /// State Machine function
    void STATE1_exit();

    /// State Machine function
    void STATE1_event1();


    ////////////////////////////////////////////////////////////////////////////////
    /// event handlers for state STATE2
    ////////////////////////////////////////////////////////////////////////////////

    /// State Machine function
    void STATE2_enter();

    /// State Machine function
    void STATE2_exit();

    /// State Machine function
    void STATE2_do();

    /// State Machine function
    void STATE2_event2();

    /// State Machine function
    void STATE2_event3();


    ////////////////////////////////////////////////////////////////////////////////
    /// event handlers for state STATE3
    ////////////////////////////////////////////////////////////////////////////////

    /// State Machine function
    void STATE3_enter();

    /// State Machine function
    void STATE3_exit();

    /// State Machine function
    void STATE3_event3();


    ////////////////////////////////////////////////////////////////////////////////
    /// event handlers for state STATE3A
    ////////////////////////////////////////////////////////////////////////////////

    /// State Machine function
    void STATE3A_enter();

    /// State Machine function
    void STATE3A_exit();

    /// State Machine function
    void STATE3A_event1();


    ////////////////////////////////////////////////////////////////////////////////
    /// event handlers for state STATE3B
    ////////////////////////////////////////////////////////////////////////////////

    /// State Machine function
    void STATE3B_enter();

    /// State Machine function
    void STATE3B_exit();

    /// State Machine function
    void STATE3B_event2();


    ////////////////////////////////////////////////////////////////////////////////
    /// event handlers for state TERMINAL
    ////////////////////////////////////////////////////////////////////////////////

    /// State Machine function
    void TERMINAL_enter();

    /// State Machine function
    void TERMINAL_exit();
};
}}
#endif // FOO_BAR_MYFSM_H_
